--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: delete-task-api.jhandu.shop
+    - host: delete-task-api.my-app-gateway.shop
       http:
         paths:
           - pathType: Prefix
